--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           >
           <ul class="header-nav-list list">
             <li class="header-nav-item">
-              <a class="header-nav-link link" href="./index.html">Studio</a>
+              <a class="header-nav-link link active" href="./index.html">Studio</a>
             </li>
             <li class="header-nav-item">
               <a class="header-nav-link link" href="./portfolio.html"
@@ -615,5 +615,23 @@
         </div>
       </div>
     </footer>
+
+    <!-- Modal Window -->
+
+<div class="backdrop">
+<div class="modal">
+  <button class="modal-close-btn">
+    <svg class="modal-close-icon" width="8" height="8">
+      <use href="./images/icons.svg#close-black-icon-modal"></use>
+    </svg>
+  </button>
+</div>
+
+
+</div>
+
+
+
+
   </body>
 </html>
