--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
 <div class="modal">
   <button class="modal-close-btn">
     <svg class="modal-close-icon" width="8" height="8">
-      <use href="./images/icons.svg#icon-close-icon-modal"></use>
+      <use href="./images/icons.svg#close-icon-modal"></use>
     </svg>
   </button>
 </div>
