--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
       <section class="hero">
         <div class="hero-container container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="hero-button" type="button">Order Service</button>
+          <button class="hero-button" 
+          type="button" 
+          data-modal-open>Order Service</button>
         </div>
       </section>
       <!-- section One Feature 2-->
@@ -618,9 +620,9 @@
 
     <!-- Modal Window -->
 
-<div class="backdrop">
+<div class="backdrop" data-modal>
 <div class="modal">
-  <button class="modal-close-btn">
+  <button class="modal-close-btn" data-modal-close>
     <svg class="modal-close-icon" width="8" height="8">
       <use href="./images/icons.svg#close-icon-modal"></use>
     </svg>
@@ -631,7 +633,7 @@
 </div>
 
 
-
+<script src="./js/modal.js"></script>
 
   </body>
 </html>
