--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
 
     <!-- Modal Window -->
 
-<div class="backdrop" data-modal>
+<div class="backdrop is-hidden" data-modal>
 <div class="modal">
   <button class="modal-close-btn" type="button" data-modal-close>
     <svg class="modal-close-icon" width="8" height="8">
