--- a/portfolio.html
+++ b/portfolio.html
@@ -34,10 +34,10 @@
           >
           <ul class="header-nav-list list">
             <li class="header-nav-item">
-              <a class="header-nav-link link" href="./index.html">Studio</a>
+              <a class="header-nav-link link active" href="./index.html">Studio</a>
             </li>
             <li class="header-nav-item">
-              <a class="header-nav-link link active" href="./portfolio.html"
+              <a class="header-nav-link link" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
