--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           >
           <ul class="header-nav-list list">
             <li class="header-nav-item">
-              <a class="header-nav-link link active" href="./index.html">Studio</a>
+              <a class="header-nav-link link active" href="./index.html"
+                >Studio</a
+              >
             </li>
             <li class="header-nav-item">
               <a class="header-nav-link link" href="./portfolio.html"
@@ -75,9 +77,9 @@
       <section class="hero">
         <div class="hero-container container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="hero-button" 
-          type="button" 
-          data-modal-open>Order Service</button>
+          <button class="hero-button" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <!-- section One Feature 2-->
@@ -620,20 +622,16 @@
 
     <!-- Modal Window -->
 
-<div class="backdrop is-hidden" data-modal>
-<div class="modal">
-  <button class="modal-close-btn" type="button" data-modal-close>
-    <svg class="modal-close-icon" width="8" height="8">
-      <use href="./images/icons.svg#close-icon-modal"></use>
-    </svg>
-  </button>
-</div>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#close-icon-modal"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
 
-
-</div>
-
-
-<script src="./js/modal.js"></script>
-
+    <script src="./js/modal.js"></script>
   </body>
 </html>
